update api documentation. add annotations for news sources. expand existed openapi config.
